--- a/src/tyml_diagnostic/message/en_US.toml
+++ b/src/tyml_diagnostic/message/en_US.toml
@@ -222,6 +222,8 @@ message = "An extra delimiter is specified"
 label_0 = "This delimiter is unnecessary"
 label_1 = "Please try removing it"
 
+[mock_error]
+name = "%color:red{[ME%0] Error}"
 [mock_error.0001]
 message = "The default return value is not specified"
 label_0 = "The return value of this function is not specified"
